[package]
name = "rekor-rs"
version = "0.0.1"
authors = ["Jyotsna Penumaka"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = { version = "^2.2" , features = ["serde"] }
tokio = { version = "1.14.0", features = ["full"] }
clap = "3.1.18"
thiserror = "1.0.31"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
